--- a/publication.html
+++ b/publication.html
@@ -87,8 +87,6 @@
 </li>
 <li><p>Y. Ding, Z. Yang, <b>Q.-V. Pham</b>, Z. Zhang, and M. Shikh-Bahaei, &ldquo;<a href="https://arxiv.org/abs/2301.00912">Distributed Machine Learning for UAV Swarms: Computing, Sensing, and Semantics</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
 </li>
-<li><p>S. Pakravan, J.-Y. Chouinard, X. Li, M. Zeng, W. Hao, <b>Q.-V. Pham</b>, and O. A. Dobre, &ldquo;<a href="Physical">Layer Security for NOMA Systems: Requirements, Issues, and Recommendations</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
-</li>
 <li><p>M.-D. Nguyen, <b>Q.-V. Pham</b>, H. T. Dinh, L. Tran-Thanh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2209.14520">Label driven Knowledge Distillation for Federated Learning with non-IID Data</a>,&rdquo; submitted, <i>International Conference on Learning Representations (ICLR)</i>, 2023.</p>
 </li>
 <li><p>T.-H. Vu, <b>Q.-V. Pham</b>, T.-T. Nguyen, D. B. da Costa, and S. Kim, &ldquo;<a href="">Enhancing RIS-Aided Two-Way Full-Duplex Communication with Non-Orthogonal Multiple Access</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
@@ -108,6 +106,8 @@
 <p><div id="2022 and In Press"></p>
 <h2>2023 and In Press</h2>
 <ol>
+<li><p>S. Pakravan, J.-Y. Chouinard, X. Li, M. Zeng, W. Hao, <b>Q.-V. Pham</b>, and O. A. Dobre, &ldquo;<a href="https://dx.doi.org/10.1109/JIOT.2023.3296319">Physical Layer Security for NOMA Systems: Requirements, Issues, and Recommendations</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, in press.</p>
+</li>
 <li><p>A. Samanta, <b>Q.-V. Pham</b>, N.-N. Dao, A. Muthanna, and S. Cho, &ldquo;<a href="https://ieeexplore.ieee.org/document/10173593/">mISO: Incentivizing Demand-Agnostic Microservices for Edge-Enabled IoT Networks</a>,&rdquo; <i>Transactions on Services Computing</i>, in press.</p>
 </li>
 <li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/10132045">STAR-RIS Enabled Short-Packet NOMA Systems</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, in press.</p>
@@ -386,7 +386,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-07-08 12:07:53 SE Asia Standard Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-07-16 12:48:39 GMT Daylight Time.
 </div>
 </div>
 </td>
