--- a/COIN/collaborator.html
+++ b/COIN/collaborator.html
@@ -76,20 +76,22 @@
 <p><div id="Visiting Scholars"></p>
 <h2>Visiting Scholars</h2>
 <ul>
-<li><p>Prof. Won-Joo Hwang, Pusan National University, Korea (July - August 2023)</p>
+<li><p>Prof. Won-Joo Hwang, Pusan National University, Korea, July - August 2023.</p>
+</li>
+<li><p>Prof. Ruyun Zhang, Zhejiang Lab (Zhejiang University), China, July - August 2023.</p>
 </li>
 </ul>
 <p></div></p>
 <p><div id="Visiting Students"></p>
 <h2>Visiting Students</h2>
 <ul>
-<li><p><a href="https://sites.google.com/site/vuthaihoc1995/">Thai-Hoc Vu</a>: MS-PhD combined program, University of Ulsan, Korea (Jan. 2022)</p>
+<li><p><a href="https://sites.google.com/site/vuthaihoc1995/">Thai-Hoc Vu</a>: MS-PhD combined program, University of Ulsan, Korea, Jan. 2022.</p>
 </li>
 </ul>
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-07 12:54:31 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-07-16 16:07:16 GMT Daylight Time.
 </div>
 </div>
 </td>
