Update CVs and index

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ Assistant Professor, Ph.D. <br />
 </ol>
 <p></div></p>
 <p><div id="About Me"></p>
-<h2>About Me <a href="Misc\Curriculum_Vitae_Pham.pdf"><font color=red size=+0.5>(<b>CV</a> - <a href="Misc\Curriculum_Vitae_Failure_Pham.pdf"><font color=red size=+0.5></b>CV of Failure</a><b></font></b></font> - <a href="Misc\Portrait_Viet.jpg"><font color=red size=+0.5><b>Photo</a>)</b></font></font></h2>
+<h2>About Me (<a href="Misc\Curriculum_Vitae_Pham.pdf"><font color=red size=+0.5><b>Complete CV</a></b></font><b></font> - <a href="Misc\Curriculum_Vitae_1page_Pham.pdf"><font color=red size=+0.5></b>Short CV</a><b></font></b></font> - <a href="Misc\Curriculum_Vitae_Failure_Pham.pdf"><font color=red size=+0.5><b>CV of Failure</a></b></font><b></font> - <a href="Misc\Portrait_Viet.jpg"><font color=red size=+0.5></b>Photo</a></font></font>)</h2>
 <p>Quoc-Viet Pham received the Ph.D. degree in telecommunications engineering from Inje University, Korea, in 2017. 
 He is currently an Assistant Professor in Networks and Distributed Systems with the School of Computer Science and Statistics, Trinity College Dublin, The University of Dublin, Ireland. 
 He is also an ADVANCE CRT supervisor and an Associate Investigator at the CONNECT centre, Ireland. 
@@ -147,7 +147,7 @@ and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Transaction
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-07-13 05:50:44 Arab Standard Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-07-16 18:00:07 GMT Daylight Time.
 </div>
 </div>
 </td>
