--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 <table class="imgtable"><tr><td>
 <img src="Misc\Portrait_Viet.jpg" alt="" width="180px" height="230px" />&nbsp;</td>
 <td align="left"><p><a href="mailto:viet.pham@tcd.ie">Viet Quoc Pham</a> <br />
-[first name] [middle name] [family name] <br />
 Assistant Professor, Ph.D. <br /> 
-<a href="https://www.scss.tcd.ie/">School of Computer Science and Statistics</a>, <a href="https://www.tcd.ie/">Trinity College Dublin</a> (TCD)</p>
+<a href="https://www.scss.tcd.ie/">School of Computer Science and Statistics</a> <br /> 
+<a href="https://www.tcd.ie/">Trinity College Dublin</a>, The University of Dublin</p>
 <p><div id="Contacts"></p>
 <h2>Contacts</h2>
 <ul>
@@ -41,7 +41,7 @@ Assistant Professor, Ph.D. <br />
 </li>
 <li><p>Phone: (+353) 083-475-5354</p>
 </li>
-<li><p>Profiles: <a href="https://scholar.google.com/citations?hl=en&amp;user=zKX-0LIAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Google Scholar</a>, <a href="https://www.researchgate.net/profile/Quoc-Viet-Pham">ResearchGate</a>, <a href="https://www.linkedin.com/in/pqv90/">LinkedIn</a>, <a href="https://orcid.org/0000-0002-9485-9216">ORCID</a>, <a href="https://www.scopus.com/authid/detail.uri?authorId=56884048100">Scopus</a>, and <a href="https://www.webofscience.com/wos/author/record/1818422">Publons</a></p>
+<li><p>Profiles: <a href="https://scholar.google.com/citations?hl=en&amp;user=zKX-0LIAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Google Scholar</a>, <a href="https://www.researchgate.net/profile/Viet-Pham-46">ResearchGate</a>, <a href="https://www.linkedin.com/in/pqv90/">LinkedIn</a>, <a href="https://orcid.org/0000-0002-9485-9216">ORCID</a>, <a href="https://www.scopus.com/authid/detail.uri?authorId=56884048100">Scopus</a>, and <a href="https://www.webofscience.com/wos/author/record/1818422">Publons</a></p>
 </li>
 <li><p>Office: 4.10, CONNECT Centre, Dunlop Oriel House, 34 Westland Row, 8PRX+RV Dublin, Ireland</p>
 </li>
@@ -129,7 +129,13 @@ Assistant Professor, Ph.D. <br />
 </ol>
 <p></div></p>
 <p><div id="About Me"></p>
-<h2>About Me (<a href="Misc\Curriculum_Vitae_Pham.pdf"><font color=red size=+0.5><b>Complete CV</a></b></font><b></font> - <a href="Misc\Curriculum_Vitae_1page_Pham.pdf"><font color=red size=+0.5></b>Short CV</a><b></font></b></font> - <a href="Misc\Curriculum_Vitae_Failure_Pham.pdf"><font color=red size=+0.5><b>CV of Failure</a></b></font><b></font> - <a href="Misc\Portrait_Viet.jpg"><font color=red size=+0.5></b>Photo</a></font></font>)</h2>
+<h2>About Me</h2>
+<p>My full name is Viet Quoc Pham, which I prefer to be called Viet in both casual and formal settings. 
+In Vietnamese, my last name is Pham and my first name is Quoc Viet. 
+I use Quoc-Viet Pham as my author name in academic articles. 
+I very often have problems answering the &ldquo;What is your correct name?&rdquo; question :)</p>
+<p><div id="Academic Bio"></p>
+<h2>Academic Bio (<a href="Misc\Curriculum_Vitae_Pham.pdf"><font color=red size=+0.5><b>Complete CV</a></b></font><b></font> - <a href="Misc\Curriculum_Vitae_1page_Pham.pdf"><font color=red size=+0.5></b>Short CV</a><b></font></b></font> - <a href="Misc\Curriculum_Vitae_Failure_Pham.pdf"><font color=red size=+0.5><b>CV of Failure</a></b></font><b></font> - <a href="Misc\Portrait_Viet.jpg"><font color=red size=+0.5></b>Photo</a></font></font>)</h2>
 <p>Viet Quoc Pham received the Ph.D. degree in telecommunications engineering from Inje University, Korea, in 2017. 
 He is currently an Assistant Professor in Networks and Distributed Systems with the School of Computer Science and Statistics, Trinity College Dublin, The University of Dublin, Ireland. 
 He is also an ADVANCE CRT supervisor and an Associate Investigator at the CONNECT centre, Ireland. 
@@ -147,7 +153,7 @@ and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Transaction
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-07-23 11:34:48 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-08-01 12:31:02 GMT Daylight Time.
 </div>
 </div>
 </td>
