--- a/publication.html
+++ b/publication.html
@@ -69,6 +69,10 @@
 <p><div id="Preprints"></p>
 <h2>Preprints</h2>
 <ol>
+<li><p>Z. Zhao, Z. Yang, <b>Q.-V. Pham</b>, Q. Yang, and Z. Zhang, &ldquo;<a href="">Semantic Communication with Probability Graph: A Joint Communication and Computation Design</a>,&rdquo; under review, <i>IEEE Transactions on Signal Processing</i>, 2023.</p>
+</li>
+<li><p>T.-H. Vu, M. Zeng, S. Kim, H. V. Poor, and <b>Q.-V. Pham</b>, &ldquo;<a href="">Short-Packet Communications: State-of-the-art and Recent Advances</a>,&rdquo; under review, <i>IEEE Wireless Communications</i>, 2023.</p>
+</li>
 <li><p>T. Huynh-The, <b>Q.-V. Pham</b>, N. C. Luong, H. Phan, and D. B. da Costa, &ldquo;<a href="">Improved Waveform Classification for Integrated Radar-Communication 6G Systems via Convolutional Neural Networks</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>, 2023.</p>
 </li>
 <li><p>T.-H. Vu, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">Rate-Splitting Multiple Access-Assisted THz-Based Short-Packet Communications</a>,&rdquo; under review, <i>IEEE Wireless Communications Letters</i>, 2023.  </p>
@@ -77,17 +81,17 @@
 </li>
 <li><p>M. Le, <b>Q.-V. Pham</b>, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang &ldquo;<a href="">Wirelessly Powered Federated Learning Networks: Joint Power Transfer, Data Sensing, Model Training, and Resource Allocation</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
 </li>
-<li><p>M. Le, <b>Q.-V. Pham</b>, T. Huynh-The, T. Do-Duy, T.-H. Vu, and W.-J. Hwang &ldquo;<a href="">Applications of Distributed Machine Learning for Future Internet: A Comprehensive Survey</a>,&rdquo; under review, <i>IEEE Communications Surveys and Tutorials</i>.</p>
+<li><p>M. Le, <b>Q.-V. Pham</b>, T. Huynh-The, T. Do-Duy, T.-H. Vu, and W.-J. Hwang &ldquo;<a href="">Applications of Distributed Machine Learning for Future IoT: A Comprehensive Survey</a>,&rdquo; under review, <i>IEEE Communications Surveys and Tutorials</i>.</p>
 </li>
 <li><p>T.-H. Vu, <b>Q.-V. Pham</b>, and S. Kim, &ldquo;<a href="">THz-based Rate-Splitting Multiple-Access (RSMA): Is It Always Better Than NOMA?</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
 </li>
-<li><p>N. C. Luong, <b>Q.-V. Pham</b>, T. Huynh-The, V. D. Nguyen, D. W. K. Ng, S. Chatzinotas, and D. Niyato, &ldquo;<a href="https://arxiv.org/abs/2212.06463">Edge Computing for Semantic Communication Enabled Metaverse: An Incentive Mechanism Design</a>,&rdquo; under review, <i>IEEE Network</i>.</p>
+<li><p>N. C. Luong, T. Huynh-The, V. D. Nguyen, D. W. K. Ng, S. Chatzinotas, D. Niyato, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://arxiv.org/abs/2212.06463">Edge Computing for Semantic Communication Enabled Metaverse: An Incentive Mechanism Design</a>,&rdquo; under review, <i>IEEE Network</i>.</p>
 </li>
-<li><p>A. K. Bashir, N. Victor, S. Bhattacharya, T. Huynh-The, R. Chengoden, G. Yenduri, P. P. R. Maddikunta, <b>Q.-V. Pham</b>, T. R. Gadekallu, and M. Liyanage, &ldquo;<a href="https://arxiv.org/abs/2304.00524">A Survey on Federated Learning for the Healthcare Metaverse: Concepts, Applications, Challenges and Future Directions</a>,&rdquo; under revision, <i>IEEE Internet of Things Journal</i>.</p>
+<li><p>A. K. Bashir, N. Victor, S. Bhattacharya, T. Huynh-The, R. Chengoden, G. Yenduri, P. P. R. Maddikunta, <b>Q.-V. Pham</b>, T. R. Gadekallu, and M. Liyanage, &ldquo;<a href="https://arxiv.org/abs/2304.00524">Federated Learning for the Healthcare Metaverse: Concepts, Applications, Challenges and Future Directions</a>,&rdquo; under revision, <i>IEEE Internet of Things Journal</i>.</p>
 </li>
 <li><p>Y. Ding, Z. Yang, <b>Q.-V. Pham</b>, Z. Zhang, and M. Shikh-Bahaei, &ldquo;<a href="https://arxiv.org/abs/2301.00912">Distributed Machine Learning for UAV Swarms: Computing, Sensing, and Semantics</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
 </li>
-<li><p>M.-D. Nguyen, <b>Q.-V. Pham</b>, H. T. Dinh, L. Tran-Thanh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2209.14520">Label driven Knowledge Distillation for Federated Learning with non-IID Data</a>,&rdquo; submitted, <i>International Conference on Learning Representations (ICLR)</i>, 2023.</p>
+<li><p>M.-D. Nguyen, <b>Q.-V. Pham</b>, H. T. Dinh, L. Tran-Thanh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2209.14520">Label driven Knowledge Distillation for Federated Learning with non-IID Data</a>,&rdquo; under review, <i>IEEE Transactions on Neural Networks and Learning Systems</i>, 2023.</p>
 </li>
 <li><p>T.-H. Vu, <b>Q.-V. Pham</b>, T.-T. Nguyen, D. B. da Costa, and S. Kim, &ldquo;<a href="">Enhancing RIS-Aided Two-Way Full-Duplex Communication with Non-Orthogonal Multiple Access</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
 </li>
@@ -96,10 +100,6 @@
 <li><p>M. Le, <b>Q.-V. Pham</b>, Q. V. Do, and W.-J. Hwang, &ldquo;<a href="">QoE-Driven Task Association and Resource Allocation in Aerial-Access Edge Computing Using Deep Reinforcement Learning</a>,&rdquo; under review, <i>IEEE Wireless Communications Letters</i>.</p>
 </li>
 <li><p>Q. V. Do, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="">QoE-Driven Task Association and Resource Allocation in Aerial-Access Edge Computing Using Deep Reinforcement Learning</a>,&rdquo; under review, <i>IEEE Transactions on Cognitive Communications and Networking</i>.</p>
-</li>
-<li><p>T. R. Gadekallu, <b>Q.-V. Pham</b>, T. Huynh-The, S. Bhattacharya, P. K. R. Maddikunta, and M. Liyanage, &ldquo;<a href="https://arxiv.org/abs/2110.04160">Federated Learning for Big Data: A Survey on Opportunities, Applications, and Future Directions</a>,&rdquo; under review, <i>Engineering Applications of Artificial Intelligence</i>.</p>
-</li>
-<li><p>M. Alazab, R. Vinayakumar, S. Srinivasan, <b>Q.-V. Pham</b>, S. Venkatraman, Soman KP, and K. Simran, &ldquo;<a href="https://www.techrxiv.org/articles/preprint/Deep_Learning_for_Cyber_Security_Applications_A_Comprehensive_Survey/16748161/1">Deep Learning for Cyber Security Applications: A Comprehensive Survey</a>,&rdquo; under revision, <i>IEEE Communications Surveys and Tutorials</i>.</p>
 </li>
 </ol>
 <p></div></p>
@@ -114,13 +114,13 @@
 </li>
 <li><p>N. H. Chu, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, K. T. Phan, W.-J. Hwang, and E. Dutkiewicz, &ldquo;<a href="https://ieeexplore.ieee.org/document/10109100">AI-enabled mm-Waveform Configuration for Autonomous Vehicles with Integrated Communication and Sensing</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, in press.</p>
 </li>
-<li><p>T.-H. Vu, T.-T. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/10106759">A Novel Partial Decode-and-Amplify NOMA-Inspired Relaying Protocol for Uplink Short-Packet Communications</a>,&rdquo; <i>IEEE Wireless Communications Letters</i>, in press.</p>
-</li>
 <li><p>N. Iradukunda, <b>Q.-V. Pham</b>, Z. Ding, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/abstract/document/10065563">THz-Enabled UAV Communications using Non-Orthogonal Multiple Access</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, in press.</p>
 </li>
 <li><p>M.-D. Nguyen, S.-M. Lee, <b>Q.-V. Pham</b>, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9829327">HCFL: A High Compression Approach for Communication-Efficient Federated Learning in Very Large Scale IoT Networks</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, in press. [<a href="https://github.com/skydvn/hcfl-compression">Python Code</a>]</p>
 </li>
 <li><p>Y. M. Saputra, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9785706">Federated Learning Framework with Straggling Mitigation and Privacy-Awareness for AI-based Mobile Application Services</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, in press.</p>
+</li>
+<li><p>T.-H. Vu, T.-T. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/10106759">A Novel Partial Decode-and-Amplify NOMA-Inspired Relaying Protocol for Uplink Short-Packet Communications</a>,&rdquo; <i>IEEE Wireless Communications Letters</i>, vol. 12, no. 7, pp. 1244-1248, Jul. 2023.</p>
 </li>
 <li><p>T. Huynh-The, T. R. Gadekallu, W. Wang, G. Yenduri, P. Ranaweera, <b>Q.-V. Pham</b>, D. B. da Costa, and M. Liyanage, &ldquo;<a href="https://www.sciencedirect.com/science/article/pii/S0167739X23000493">Blockchain for the Metaverse: A Review</a>,&rdquo; <i>Future Generation Computer Systems</i>, vol. 143, pp. 401-419, Jun. 2023.</p>
 </li>
@@ -379,14 +379,14 @@
 <ul>
 <li><p>Q.-V. Pham, &ldquo;<a href="Archive/PHAM_PhD_Thesis.pdf">Fair and Energy-Efficient Resource Allocation Optimization in Wireless Networks</a>,&rdquo; PhD Thesis, Inje University, Aug. 2017. (Best PhD Award, Ranking #1 in Engineering)</p>
 </li>
-<li><p>Q.-V. Pham &ldquo;<a href="Archive/PHAM_MS_Thesis.pdf">Multi-Timescale Cross-Layer Design in Wireless Multihop Networks</a>,&rdquo; M.S. Thesis, Inje University, Aug. 2015.</p>
+<li><p>Q.-V. Pham, &ldquo;<a href="Archive/PHAM_MS_Thesis.pdf">Multi-Timescale Cross-Layer Design in Wireless Multihop Networks</a>,&rdquo; M.S. Thesis, Inje University, Aug. 2015.</p>
 </li>
 <li><p>Q.-V. Pham, &ldquo;<a href="">Building an Observational Data Processing and Archiving Center for Automatic Water Level Gathering and Alarming System</a>&rdquo; (in Vietnamese), B.S. Thesis, Hanoi University of Science and Technology, Aug. 2013.</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-07-16 16:07:22 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-08-01 13:28:26 GMT Daylight Time.
 </div>
 </div>
 </td>
