--- a/index.html
+++ b/index.html
@@ -63,27 +63,17 @@ Assistant Professor, Ph.D. <br />
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p>[07/2023] Great news! I was invited to join the editorial board of the IEEE Communications Letters.</p>
+<li><p>[07/2023] <font color=red size=+0.5>Hot!</font> I was invited to join the editorial board of the IEEE Communications Letters.</p>
 </li>
 <li><p>[06/2023] I visited the University of Ulsan and Pusan National University (Korea), HUST and PTIT (Vietnam).</p>
 </li>
-<li><p>[05/2023] <font color=red size=+0.5><b>Hot!!!</b></font> I got the Enterprise Ireland Coordination Support Award. </p>
-</li>
-<li><p>[05/2023] Our workshop proposal entitled &ldquo;Edge Learning over Next-Generation Networks&rdquo; - <a href="https://globecom2023.ieee-globecom.org/">IEEE GLOBECOM 2023</a> got accepted. </p>
-</li>
-<li><p>[04/2023] <a href="COIN\Misc\COIN_PhDStudents_Recruitment_2023.pdf"><b>Two-fully funded PhD scholarships</b></a> are available. Applicants can contact me via email if you want to join my COIN group @TCD.</p>
+<li><p>[05/2023] <font color=red size=+0.5>Hot!</font> I got the Enterprise Ireland Coordination Support Award. </p>
 </li>
 <li><p>[04/2023] I am invited to serve as track chair for <a href="https://soict.org/">SOICT 2023</a>. Submit your high-quality papers and visit HCM City, Vietnam in Dec. 2023. </p>
-</li>
-<li><p>[03/2023] Our papers on <a href="">wireless security</a> and <a href="">federated learning</a> got accepted to IEEE ICC 2023 (Rome, Italy).</p>
-</li>
-<li><p>[02/2023] Congratulations Dr. Nadia for our paper on <a href="">THz-UAV Communications using NOMA</a> being accepted to IEEE TVT.</p>
 </li>
 <li><p>[01/2023] I have joined <a href="https://connectcentre.ie/">SFI CONNECT</a> as an Associate Investigator and <a href="https://www.advance-crt.ie/">SFI AdvanceCRT</a> as a TCD supervisor.</p>
 </li>
 <li><p>[01/2023] <font color=red size=+0.5><b>New academic chapter!</b></font> I am currently with the <a href="https://www.scss.tcd.ie/">School of Computer Science and Statistics</a>, <a href="https://www.tcd.ie/">Trinity College Dublin</a>.</p>
-</li>
-<li><p>[10/2022] Congratulations Duong for winning a best paper award from IEEE ATC 2022 for his work on <a href="">FL for Massive IoT</a>. </p>
 </li>
 <li><p>[02/2022] I have been invited to serve as an editorial member for <a href="https://www.nature.com/srep/">Scientific Reports</a>. </p>
 </li>
@@ -91,40 +81,44 @@ Assistant Professor, Ph.D. <br />
 </li>
 <li><p>[12/2021] I have received an award from the Minister of Education (Korea) for outstanding contributions and research excellence. <br /></p>
 </li>
-<li><p>[10/2021] <font color=red size=+0.5><b>Hot!!!</b></font> We won the FDCRGP Grant ($136,000 for Jan. 2022 - Dec. 2024) for our research on edge learning (PI: <a href="mailto:tu.nguyen@nu.edu.kz">Dr. Tu Nguyen</a>). <br /></p>
+<li><p>[10/2021] <font color=red size=+0.5>Hot!</font> We won the FDCRGP Grant ($136,000 for Jan. 2022 - Dec. 2024) for our research on edge learning (PI: <a href="mailto:tu.nguyen@nu.edu.kz">Dr. Tu Nguyen</a>). <br /></p>
 </li>
-<li><p>[01/2021] I have received the <a href="Misc/Rv_Award_TVT_2020.pdf">Top Reviewer Award</a> from IEEE Transactions on Vehicular Technology in 2020.</p>
+<li><p>[10/2020] <font color=red size=+0.5>Hot!</font> I have been invited as an editor of <a href="https://www.journals.elsevier.com/journal-of-network-and-computer-applications">Journal of Network and Computer Applications</a>.</p>
 </li>
-<li><p>[10/2020] <font color=red size=+0.5><b>Hot!!!</b></font> I have been invited as an editor of <a href="https://www.journals.elsevier.com/journal-of-network-and-computer-applications">Journal of Network and Computer Applications</a>.</p>
-</li>
-<li><p>[10/2019] My paper on <a href="https://ieeexplore.ieee.org/document/8917566">MEC-NOMA using coalitional games</a> has been published by the IEEE Transactions on Vehicular Technology.</p>
-</li>
-<li><p>[12/2018] <font color=red size=+0.5><b>Hot!!!</b></font> I have received a 5-year project from Korea NRF (sole-PI, 500,000,000 KRW for Feb. 2019 - Feb. 2024).</p>
+<li><p>[02/2019] <font color=red size=+0.5>Hot!</font> I have started my five-year project funded by Korea NRF (sole-PI, 500,000,000 KRW for Feb. 2019 - Feb. 2024).</p>
 </li>
 </ul>
 <p></div></p>
 <p><div id="Selected Publication"></p>
 <h2>Selected Publication <a href="publication.html"><font color=red size=+0.5><b>(Full Publication)</b></font></a></h2>
 <ol>
+<li><p>M.-D. Nguyen, Q.-V. Pham, H. T. Dinh, L. Tran-Thanh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2209.14520">Label driven Knowledge Distillation for Federated Learning with non-IID Data</a>,&rdquo; 2023.</p>
+</li>
 <li><p>Y. M. Saputra, D. N. Nguyen, H. T. Dinh, Q.-V. Pham, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9785706">Federated Learning Framework with Straggling Mitigation and Privacy-Awareness for AI-based Mobile Application Services</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, 2023.</p>
 </li>
 <li><p>M.-D. Nguyen, S.-M. Lee, Q.-V. Pham, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9829327">HCFL: A High Compression Approach for Communication-Efficient Federated Learning in Very Large Scale IoT Networks</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, 2023.</p>
 </li>
-<li><p>T.-H. Vu, T.-V. Nguyen, Q.-V. Pham, D. B. da Costa, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9964377">Short-Packet Communications in UAV-Based NOMA Systems under Imperfect CSI and SIC</a>,&rdquo; <i>IEEE Transactions on Cognitive Communications and Networking</i>, vol. 9, no. 2, pp. 463-478, Apr. 2023.</p>
+<li><p>A. Samanta, Q.-V. Pham, N.-N. Dao, A. Muthanna, and S. Cho, &ldquo;<a href="https://ieeexplore.ieee.org/document/10173593/">mISO: Incentivizing Demand-Agnostic Microservices for Edge-Enabled IoT Networks</a>,&rdquo; <i>Transactions on Services Computing</i>, 2023.</p>
 </li>
-<li><p>Q.-V. Pham, R. Ruby, F. Fang, D. C. Nguyen, Z. Yang, M. Le, Z. Ding, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9738797">Aerial Computing: A New Computing Paradigm, Applications, and Challenges</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 9, no. 11, pp. 8339-8363, Jun. 2022.</p>
+<li><p>T.-H. Vu, T.-V. Nguyen, Q.-V. Pham, D. B. da Costa, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9964377">Short-Packet Communications in UAV-NOMA Systems under Imperfect CSI and SIC</a>,&rdquo; <i>IEEE Transactions on Cognitive Communications and Networking</i>, 2023.</p>
 </li>
-<li><p>Q.-V. Pham, M. Le, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9709639">Energy-Efficient Federated Learning over UAV-enabled Wireless Powered Communications</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 71, no. 5, pp. 4977-4990, May 2022.</p>
+<li><p>Q.-V. Pham, R. Ruby, F. Fang, D. C. Nguyen, Z. Yang, M. Le, Z. Ding, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9738797">Aerial Computing: A New Computing Paradigm, Applications, and Challenges</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, 2022.</p>
 </li>
-<li><p>Q. V. Do, Q.-V. Pham, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9584850/">Deep Reinforcement Learning for Energy-Efficient Federated Learning in UAV-Enabled Wireless Powered Networks</a>,&rdquo; <i>IEEE Communications Letters</i>, vol. 26, no. 1, pp. 99-103, Jan. 2022.</p>
+<li><p>Q.-V. Pham, M. Le, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9709639">Energy-Efficient Federated Learning over UAV-enabled Wireless Powered Communications</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, 2022.</p>
 </li>
-<li><p>L. Nkenyereye, L. Nkenyereye, Q.-V. Pham, and J. S. Song, &ldquo;<a href="https://ieeexplore.ieee.org/document/9555379">Efficient RSU Selection Scheme for Fog-Based Vehicular Software-Defined Network</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 70, no. 11, pp. 12126-12141, Nov. 2021.</p>
+<li><p>T. Huynh-The, T.-V. Nguyen, Q.-V. Pham, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9735404">MIMO-OFDM Modulation Classification Using Three-Dimensional Convolutional Network</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, 2022.</p>
 </li>
-<li><p>H. Han, J. Zhao, W. Zhai, Z. Xiong, D. Niyato, M. D. Renzo, Q.-V. Pham, W. Lu, and K.-Y. Lam, &ldquo;<a href="https://ieeexplore.ieee.org/document/9514563">Reconfigurable Intelligent Surface Aided Power Control for Physical-Layer Broadcasting</a>,&rdquo; <i>IEEE Transactions on Communications</i>, vol. 69, no. 11, pp. 7821-7836, Nov. 2021.</p>
+<li><p>Q. V. Do, Q.-V. Pham, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9584850/">Deep Reinforcement Learning for Energy-Efficient Federated Learning in UAV-Enabled Wireless Powered Networks</a>,&rdquo; <i>IEEE Communications Letters</i>, 2022.</p>
 </li>
-<li><p>T. Huynh-The, C.-H. Hua, Q.-V. Pham, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/8963964">MCNet: An Efficient CNN Architecture for Robust Automatic Modulation Classification</a>,&rdquo; <i>IEEE Communications Letters</i>, vol. 24, no. 4, pp. 811-815, Apr. 2020.</p>
+<li><p>T. Huynh-The, V.-S. Doan, C.-H. Hua, Q.-V. Pham, T.-V. Nguyen, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9416299">Accurate LPI Radar Waveform Recognition with CWD-TFA for Deep Convolutional Network</a>,&rdquo; <i>IEEE Wireless Communications Letters</i>, 2021.</p>
 </li>
-<li><p>Q.-V. Pham, Hoang T. Nguyen, Z. Han, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/8917566">Coalitional Games for Computation Offloading in NOMA-Enabled Multi-Access Edge Computing</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 69, no. 2, pp. 1982-1993, Feb. 2020.</p>
+<li><p>L. Nkenyereye, L. Nkenyereye, Q.-V. Pham, and J. S. Song, &ldquo;<a href="https://ieeexplore.ieee.org/document/9555379">Efficient RSU Selection Scheme for Fog-Based Vehicular Software-Defined Network</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, 2021.</p>
+</li>
+<li><p>H. Han, J. Zhao, W. Zhai, Z. Xiong, D. Niyato, M. D. Renzo, Q.-V. Pham, W. Lu, and K.-Y. Lam, &ldquo;<a href="https://ieeexplore.ieee.org/document/9514563">RIS Aided Power Control for Physical-Layer Broadcasting</a>,&rdquo; <i>IEEE Transactions on Communications</i>, 2021.</p>
+</li>
+<li><p>T. Huynh-The, C.-H. Hua, Q.-V. Pham, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/8963964">MCNet: An Efficient CNN Architecture for Robust Automatic Modulation Classification</a>,&rdquo; <i>IEEE Communications Letters</i>, 2020.</p>
+</li>
+<li><p>Q.-V. Pham, Hoang T. Nguyen, Z. Han, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/8917566">Coalitional Games for Computation Offloading in NOMA-Enabled Multi-Access Edge Computing</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, 2020.</p>
 </li>
 </ol>
 <p></div></p>
@@ -153,7 +147,7 @@ and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Transaction
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-08-01 12:31:02 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-08-01 13:25:24 GMT Daylight Time.
 </div>
 </div>
 </td>
