--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ Assistant Professor, Ph.D. <br />
 </ul>
 <p></div></p>
 <p><div id="Selected Publication"></p>
-<h2>Selected Publication <a href="publication.html"><font color=red size=+0.5><b>(Full Publication)</b></font></a></h2>
+<h2>Selected Publication <a href="publication.html">(<font color=red size=+0.5><b>Full Publication</b></font></a>)</h2>
 <ol>
 <li><p>M.-D. Nguyen, Q.-V. Pham, H. T. Dinh, L. Tran-Thanh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2209.14520">Label driven Knowledge Distillation for Federated Learning with non-IID Data</a>,&rdquo; 2023.</p>
 </li>
@@ -124,7 +124,7 @@ Assistant Professor, Ph.D. <br />
 <p></div></p>
 <p><div id="About Me"></p>
 <h2>About Me</h2>
-<p>My full name is Viet Quoc Pham, which I prefer to be called Viet in both casual and formal settings. 
+<p>My full name is Viet Quoc Pham, which I prefer to be called Viet. 
 In Vietnamese, my last name is Pham and my first name is Quoc Viet. 
 I use Quoc-Viet Pham as my author name in academic articles. 
 I very often have problems answering the &ldquo;What is your correct name?&rdquo; question :)</p>
@@ -147,7 +147,7 @@ and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Transaction
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-08-01 13:25:24 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-08-01 13:35:08 GMT Daylight Time.
 </div>
 </div>
 </td>
