--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 <img src="Misc\Portrait_Viet.jpg" alt="" width="180px" height="230px" />&nbsp;</td>
 <td align="left"><p><a href="mailto:viet.pham@tcd.ie">Viet Quoc Pham</a> <br />
 Assistant Professor, Ph.D. <br /> 
-<a href="https://www.scss.tcd.ie/">School of Computer Science and Statistics</a> <br /> 
-<a href="https://www.tcd.ie/">Trinity College Dublin</a>, The University of Dublin</p>
+<a href="https://www.scss.tcd.ie/">School of Computer Science and Statistics</a> (SCSS) <br /> 
+<a href="https://www.tcd.ie/">Trinity College Dublin</a> (TCD), The University of Dublin</p>
 <p><div id="Contacts"></p>
 <h2>Contacts</h2>
 <ul>
@@ -63,6 +63,8 @@ Assistant Professor, Ph.D. <br />
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
+<li><p>[08/2023] I have been appointed as the Demonstrator and Teaching Assistant Director of TCD SCSS.</p>
+</li>
 <li><p>[07/2023] <font color=red size=+0.5>Hot!</font> I was invited to join the editorial board of the IEEE Communications Letters.</p>
 </li>
 <li><p>[06/2023] I visited the University of Ulsan and Pusan National University (Korea), HUST and PTIT (Vietnam).</p>
@@ -147,7 +149,7 @@ and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Transaction
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-08-01 13:35:08 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-08-03 18:17:59 GMT Daylight Time.
 </div>
 </div>
 </td>
