--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@ Assistant Professor, Ph.D. <br />
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p>[08/2023] I was appointed as the Demonstrator and Teaching Assistant Director of TCD SCSS.</p>
+<li><p>[08/2023] I have been appointed as the Demonstrator and Teaching Assistant Director of TCD SCSS.</p>
 </li>
-<li><p>[07/2023] <font color=red size=+0.5>Hot!</font> I was invited to join the editorial board of the IEEE Communications Letters.</p>
+<li><p>[07/2023] <font color=red size=+0.5>Hot!</font> I have been invited to join the editorial board of the IEEE Communications Letters.</p>
 </li>
 <li><p>[06/2023] I visited the University of Ulsan and Pusan National University (Korea), HUST and PTIT (Vietnam).</p>
 </li>
@@ -149,7 +149,7 @@ and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Transaction
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-08-03 18:19:29 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-08-03 18:21:36 GMT Daylight Time.
 </div>
 </div>
 </td>
