--- a/eduwork.html
+++ b/eduwork.html
@@ -28,37 +28,44 @@
 <div id="toptitle">
 <h1>Education and Work</h1>
 </div>
+<p><div id="Education"></p>
+<h2>Education</h2>
+<ul>
+<li><p>Sep. 2015 - Aug. 2017: Doctor of Philosophy (Ph.D.) in Engineering, Inje University, Gimhae, Korea</p>
+</li>
+<li><p>Sep. 2013 - Aug. 2015: Master of Science (MSc) in Telecommunications, Inje University, Gimhae, Korea</p>
+</li>
+<li><p>Sep. 2008 - Aug. 2013: Bachelor of Engineering (BEng) in Electronics and Telecommunications, Hanoi University of Science and Technology, Hanoi, Vietnam</p>
+</li>
+<li><p>Sep. 2005 - Aug. 2008: Donggia High School, Hai Duong, Vietnam</p>
+</li>
+</ul>
+<p></div></p>
 <p><div id="Academic Experience"></p>
 <h2>Academic Experience</h2>
 <ul>
 <li><p>Jan. 2023 - Present: Assistant Professor, School of Computer Science and Statistics, Trinity College Dublin, The University of Dublin, Ireland</p>
 </li>
-<li><p>Jan. 2023 - Present: Supervisor, SFI Centre for Research Training focused on Future Networks and the Internet of Things (AdvanceCRT), Ireland</p>
+<li><p>Jan. 2023 - Present: Supervisor, SFI Centre for Research Training in Advanced Networks for Sustainable Societies (AdvanceCRT), Ireland</p>
 </li>
 <li><p>Jan. 2023 - Present: Associate Investigator, SFI Centre for Future Networks and Communications (CONNECT), Ireland</p>
 </li>
-<li><p>Jan. 2020 - Jan. 2023: Research Professor, Pusan National University, South Korea</p>
+<li><p>Jan. 2020 - Jan. 2023: Research Professor, Pusan National University, Korea</p>
 </li>
-<li><p>Mar. 2018 - Dec. 2019: Research Professor, Changwon National University / Inje University, South Korea</p>
+<li><p>Mar. 2018 - Dec. 2019: Research Professor, Changwon National University / Inje University, Korea</p>
 </li>
-<li><p>Sep. 2017 - Feb. 2018: Postdoctoral Researcher, Kyung Hee University, South Korea</p>
+<li><p>Sep. 2017 - Feb. 2018: Postdoctoral Researcher, Kyung Hee University, Korea</p>
 </li>
-<li><p>Sep. 2013 - Aug. 2017: Research Assistant, Inje University, South Korea</p>
+<li><p>Sep. 2013 - Aug. 2017: Research Assistant, Inje University, Korea</p>
 </li>
 <li><p>Feb. 2012 - Aug. 2013: Research Assistant, Hanoi University of Science and Technology, Vietnam</p>
 </li>
 </ul>
 <p></div></p>
-<p><div id="Education"></p>
-<h2>Education</h2>
+<p><div id="Administrative Experience"></p>
+<h2>Administrative Experience</h2>
 <ul>
-<li><p>Sep. 2015 - Aug. 2017: Doctor of Philosophy (Ph.D.) in Telecommunications Systems at Inje University, Gimhae, South Korea</p>
-</li>
-<li><p>Sep. 2013 - Aug. 2015: Master of Science (MS) Degree in Computer Science at Inje University, Gimhae, South Korea</p>
-</li>
-<li><p>Sep. 2008 - Aug. 2013: Bachelor Degree (BE) in Electronics and Telecommunications Engineering at Hanoi University of Science and Technology, Hanoi, Vietnam</p>
-</li>
-<li><p>Sep. 2005 - Aug. 2008: Donggia High School, Hai Duong, Vietnam</p>
+<li><p>Aug. 2023 - Present: Demonstrator and Teaching Assistant Director, School of Computer Science and Statistics, Trinity College Dublin, Ireland</p>
 </li>
 </ul>
 <p></div></p>
@@ -74,7 +81,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 13:38:21 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-08-04 09:37:07 GMT Daylight Time.
 </div>
 </div>
 </td>
