--- a/index.html
+++ b/index.html
@@ -124,12 +124,6 @@ Assistant Professor, Ph.D. <br />
 </li>
 </ol>
 <p></div></p>
-<p><div id="About Me"></p>
-<h2>About Me</h2>
-<p>My full name is Viet Quoc Pham, which I prefer to be called Viet. 
-In Vietnamese, my last name is Pham and my first name is Quoc Viet. 
-I use Quoc-Viet Pham as my author name in academic articles. 
-I very often have problems answering the &ldquo;What is your correct name?&rdquo; question :)</p>
 <p><div id="Academic Bio"></p>
 <h2>Academic Bio (<a href="Misc\Curriculum_Vitae_Pham.pdf"><font color=red size=+0.5><b>Complete CV</a></b></font><b></font> - <a href="Misc\Curriculum_Vitae_1page_Pham.pdf"><font color=red size=+0.5></b>Short CV</a><b></font></b></font> - <a href="Misc\Curriculum_Vitae_Failure_Pham.pdf"><font color=red size=+0.5><b>CV of Failure</a></b></font><b></font> - <a href="Misc\Portrait_Viet.jpg"><font color=red size=+0.5></b>Photo</a></font></font>)</h2>
 <p>Viet Quoc Pham received the Ph.D. degree in telecommunications engineering from Inje University, Korea, in 2017. 
@@ -147,9 +141,16 @@ and Enterprise Ireland Coordination Support Award in 2023.
 He is an Editor of IEEE Communications Letters, Journal of Network and Computer Applications and Scientific Reports, 
 and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Transactions on Consumer Electronics, and Computer Communications.</p>
 <p></div></p>
+<p><div id="About Me"></p>
+<h2>About Me</h2>
+<p>My full name is Viet Quoc Pham, which I prefer to be called Viet. 
+In Vietnamese, my last name is Pham and my first name is Quoc Viet. 
+I use Quoc-Viet Pham as my author name in academic articles. 
+I very often have problems answering the &ldquo;What is your correct name?&rdquo; question :)</p>
+<p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-08-03 18:21:36 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-08-05 09:53:01 GMT Daylight Time.
 </div>
 </div>
 </td>
