Update openings and team

--- a/COIN/opening.html
+++ b/COIN/opening.html
@@ -36,14 +36,20 @@ You can get a sense of the style of our work by looking at <a href="../publicati
 <p><div id="Openings"></p>
 <h2>Openings</h2>
 <ul>
+<li><p>Postgraduate Scholarship Programme by the <a href="https://research.ie/funding/goipg/">Government of Ireland</a>. <br />
+Deadline:  12 October 2023. <br />
+<b>Note</b>: Interested canddiates should contact me earlier to discuss our research interests and prepare the proposal. </p>
+</li>
+</ul>
+<ul>
 <li><p>You are invited to apply for <a href="https://marie-sklodowska-curie-actions.ec.europa.eu/calls/msca-postdoctoral-fellowships-2023">MSCA Postdoctoral Fellowships 2023</a>. <br />
 Deadline: 13 September 2023 (proposal submission). <br />
-Note: You should contact me earlier to discuss our research interests and prepare the proposal. </p>
+<b>Note</b>: Interested canddiates should contact me earlier to discuss our research interests and prepare the proposal. </p>
 </li>
 </ul>
 <ul>
 <li><p>Twenty-five 36-month fellowships are available under the <a href="https://research.ie/funding/dorothy-cofund-programme/?f=postdoctoral">DOROTHY COFUND</a> programme. <br />
-Deadline for applications: 21 June 2023. <br /></p>
+Deadline for applications: 21 June 2023. <b>Closed</b> <br /> </p>
 </li>
 </ul>
 <ul>
@@ -73,7 +79,7 @@ Deadline: 24 March 2023. <b>Closed</b></p>
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-25 13:26:35 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-08-07 12:11:22 GMT Daylight Time.
 </div>
 </div>
 </td>
