--- a/COIN/team.html
+++ b/COIN/team.html
@@ -64,6 +64,14 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Publons</a>
 <li><p>Research Topic: Adaptive framework for scaling federated learning (FL) in IoT systems. </p>
 </li></ul>
 </li>
+<li><p>PhD Student 3
+</p>
+<ul>
+<li><p>Visiting PhD Student, <a href="https://www.tcd.ie/">Trinity College Dublin</a>, 2023/10 - Present.</p>
+</li>
+<li><p>Research Topic: beamforming/precoding, physical layer security, satellite communications, and NOMA.</p>
+</li></ul>
+</li>
 <li><p>Thai-Hoc Vu </p>
 <ul>
 <li><p>PhD Student, <a href="https://global.ulsan.ac.kr/en/Main.do">University of Ulsan</a>, 2021/03 - Present.</p>
@@ -194,7 +202,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Publons</a>
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-06-26 02:45:23 Korea Standard Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-08-07 12:12:50 GMT Daylight Time.
 </div>
 </div>
 </td>
