--- a/publication.html
+++ b/publication.html
@@ -81,8 +81,6 @@
 </li>
 <li><p>N. C. Luong, T. Huynh-The, V. D. Nguyen, D. W. K. Ng, S. Chatzinotas, D. Niyato, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://arxiv.org/abs/2212.06463">Edge Computing for Semantic Communication Enabled Metaverse: An Incentive Mechanism Design</a>,&rdquo; under review, <i>IEEE Network</i>.</p>
 </li>
-<li><p>A. K. Bashir, N. Victor, S. Bhattacharya, T. Huynh-The, R. Chengoden, G. Yenduri, P. P. R. Maddikunta, <b>Q.-V. Pham</b>, T. R. Gadekallu, and M. Liyanage, &ldquo;<a href="https://arxiv.org/abs/2304.00524">Federated Learning for the Healthcare Metaverse: Concepts, Applications, Challenges and Future Directions</a>,&rdquo; under revision, <i>IEEE Internet of Things Journal</i>.</p>
-</li>
 <li><p>Y. Ding, Z. Yang, <b>Q.-V. Pham</b>, Z. Zhang, and M. Shikh-Bahaei, &ldquo;<a href="https://arxiv.org/abs/2301.00912">Distributed Machine Learning for UAV Swarms: Computing, Sensing, and Semantics</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
 </li>
 <li><p>M.-D. Nguyen, <b>Q.-V. Pham</b>, H. T. Dinh, L. Tran-Thanh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2209.14520">Label driven Knowledge Distillation for Federated Learning with non-IID Data</a>,&rdquo; under review, <i>IEEE Transactions on Neural Networks and Learning Systems</i>, 2023.</p>
@@ -100,19 +98,21 @@
 <p><div id="2022 and In Press"></p>
 <h2>2023 and In Press</h2>
 <ol>
-<li><p>S. Pakravan, J.-Y. Chouinard, X. Li, M. Zeng, W. Hao, <b>Q.-V. Pham</b>, and O. A. Dobre, &ldquo;<a href="https://dx.doi.org/10.1109/JIOT.2023.3296319">Physical Layer Security for NOMA Systems: Requirements, Issues, and Recommendations</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, in press.</p>
+<li><p>A. K. Bashir, N. Victor, S. Bhattacharya, T. Huynh-The, R. Chengoden, G. Yenduri, P. P. R. Maddikunta, <b>Q.-V. Pham</b>, T. R. Gadekallu, and M. Liyanage, &ldquo;<a href="https://arxiv.org/abs/2304.00524">Federated Learning for the Healthcare Metaverse: Concepts, Applications, Challenges and Future Directions</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, early access.</p>
 </li>
-<li><p>A. Samanta, <b>Q.-V. Pham</b>, N.-N. Dao, A. Muthanna, and S. Cho, &ldquo;<a href="https://ieeexplore.ieee.org/document/10173593/">mISO: Incentivizing Demand-Agnostic Microservices for Edge-Enabled IoT Networks</a>,&rdquo; <i>Transactions on Services Computing</i>, in press.</p>
+<li><p>S. Pakravan, J.-Y. Chouinard, X. Li, M. Zeng, W. Hao, <b>Q.-V. Pham</b>, and O. A. Dobre, &ldquo;<a href="https://dx.doi.org/10.1109/JIOT.2023.3296319">Physical Layer Security for NOMA Systems: Requirements, Issues, and Recommendations</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, early access.</p>
 </li>
-<li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/10132045">STAR-RIS Enabled Short-Packet NOMA Systems</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, in press.</p>
+<li><p>A. Samanta, <b>Q.-V. Pham</b>, N.-N. Dao, A. Muthanna, and S. Cho, &ldquo;<a href="https://ieeexplore.ieee.org/document/10173593/">mISO: Incentivizing Demand-Agnostic Microservices for Edge-Enabled IoT Networks</a>,&rdquo; <i>Transactions on Services Computing</i>, early access.</p>
 </li>
-<li><p>N. H. Chu, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, K. T. Phan, W.-J. Hwang, and E. Dutkiewicz, &ldquo;<a href="https://ieeexplore.ieee.org/document/10109100">AI-enabled mm-Waveform Configuration for Autonomous Vehicles with Integrated Communication and Sensing</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, in press.</p>
+<li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/10132045">STAR-RIS Enabled Short-Packet NOMA Systems</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, early access.</p>
 </li>
-<li><p>N. Iradukunda, <b>Q.-V. Pham</b>, Z. Ding, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/abstract/document/10065563">THz-Enabled UAV Communications using Non-Orthogonal Multiple Access</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, in press.</p>
+<li><p>N. H. Chu, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, K. T. Phan, W.-J. Hwang, and E. Dutkiewicz, &ldquo;<a href="https://ieeexplore.ieee.org/document/10109100">AI-enabled mm-Waveform Configuration for Autonomous Vehicles with Integrated Communication and Sensing</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, early access.</p>
 </li>
-<li><p>M.-D. Nguyen, S.-M. Lee, <b>Q.-V. Pham</b>, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9829327">HCFL: A High Compression Approach for Communication-Efficient Federated Learning in Very Large Scale IoT Networks</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, in press. [<a href="https://github.com/skydvn/hcfl-compression">Python Code</a>]</p>
+<li><p>N. Iradukunda, <b>Q.-V. Pham</b>, Z. Ding, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/abstract/document/10065563">THz-Enabled UAV Communications using Non-Orthogonal Multiple Access</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, early access.</p>
 </li>
-<li><p>Y. M. Saputra, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9785706">Federated Learning Framework with Straggling Mitigation and Privacy-Awareness for AI-based Mobile Application Services</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, in press.</p>
+<li><p>M.-D. Nguyen, S.-M. Lee, <b>Q.-V. Pham</b>, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9829327">HCFL: A High Compression Approach for Communication-Efficient Federated Learning in Very Large Scale IoT Networks</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, early access. [<a href="https://github.com/skydvn/hcfl-compression">Python Code</a>]</p>
+</li>
+<li><p>Y. M. Saputra, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9785706">Federated Learning Framework with Straggling Mitigation and Privacy-Awareness for AI-based Mobile Application Services</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, vol. 22, no. 9, pp. 5296-5312, Sep. 2023.</p>
 </li>
 <li><p>T.-H. Vu, T.-T. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/10106759">A Novel Partial Decode-and-Amplify NOMA-Inspired Relaying Protocol for Uplink Short-Packet Communications</a>,&rdquo; <i>IEEE Wireless Communications Letters</i>, vol. 12, no. 7, pp. 1244-1248, Jul. 2023.</p>
 </li>
@@ -382,7 +382,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-08-05 09:12:46 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-08-08 09:00:32 GMT Daylight Time.
 </div>
 </div>
 </td>
