--- a/publication.html
+++ b/publication.html
@@ -66,8 +66,8 @@
 </li>
 </ol>
 <p></div></p>
-<p><div id="2023, Early Access, and Preprints"></p>
-<h2>2023, Early Access, and Preprints</h2>
+<p><div id="Preprints"></p>
+<h2>Preprints</h2>
 <ol>
 <li><p>T. Huynh-The, <b>Q.-V. Pham</b>, N. C. Luong, H. Phan, and D. B. da Costa, &ldquo;<a href="">Improved Waveform Classification for Integrated Radar-Communication 6G Systems via Convolutional Neural Networks</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>, 2023.</p>
 </li>
@@ -93,6 +93,11 @@
 </li>
 <li><p>Q. V. Do, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="">QoE-Driven Task Association and Resource Allocation in Aerial-Access Edge Computing Using Deep Reinforcement Learning</a>,&rdquo; under review, <i>IEEE Transactions on Cognitive Communications and Networking</i>.</p>
 </li>
+</ol>
+<p></div></p>
+<p><div id="2023 and Early Access"></p>
+<h2>2023 and Early Access</h2>
+<ol>
 <li><p>A. K. Bashir, N. Victor, S. Bhattacharya, T. Huynh-The, R. Chengoden, G. Yenduri, P. P. R. Maddikunta, <b>Q.-V. Pham</b>, T. R. Gadekallu, and M. Liyanage, &ldquo;<a href="https://arxiv.org/abs/2304.00524">Federated Learning for the Healthcare Metaverse: Concepts, Applications, Challenges and Future Directions</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, early access.</p>
 </li>
 <li><p>S. Pakravan, J.-Y. Chouinard, X. Li, M. Zeng, W. Hao, <b>Q.-V. Pham</b>, and O. A. Dobre, &ldquo;<a href="https://dx.doi.org/10.1109/JIOT.2023.3296319">Physical Layer Security for NOMA Systems: Requirements, Issues, and Recommendations</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, early access.</p>
@@ -377,7 +382,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-08-08 09:10:07 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-08-08 09:12:43 GMT Daylight Time.
 </div>
 </div>
 </td>
