--- a/publication.html
+++ b/publication.html
@@ -73,7 +73,7 @@
 </li>
 <li><p>T.-H. Vu, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">Rate-Splitting Multiple Access-Assisted THz-Based Short-Packet Communications</a>,&rdquo; under review, <i>IEEE Wireless Communications Letters</i>, 2023.  </p>
 </li>
-<li><p>M. Le, <b>Q.-V. Pham</b>, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang &ldquo;<a href="">Wirelessly Powered Federated Learning Networks: Joint Power Transfer, Data Sensing, Model Training, and Resource Allocation</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
+<li><p>M. Le, <b>Q.-V. Pham</b>, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang &ldquo;<a href="https://arxiv.org/abs/2308.04953">Wirelessly Powered Federated Learning Networks: Joint Power Transfer, Data Sensing, Model Training, and Resource Allocation</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
 </li>
 <li><p>M. Le, <b>Q.-V. Pham</b>, T. Huynh-The, T. Do-Duy, T.-H. Vu, and W.-J. Hwang &ldquo;<a href="">Applications of Distributed Machine Learning for Future IoT: A Comprehensive Survey</a>,&rdquo; under review, <i>IEEE Communications Surveys and Tutorials</i>.</p>
 </li>
@@ -232,7 +232,7 @@
 </li>
 <li><p>N.-N. Dao, <b>Q.-V. Pham</b>, N. H. Tu, T. T. Thanh, V. N. Q. Bao, D. S. Lakew, and S. Cho, &ldquo;<a href="https://ieeexplore.ieee.org/document/9358097">Survey on Aerial Radio Access Networks: Toward a Comprehensive 6G Access Infrastructure</a>,&rdquo; <i>IEEE Communications Surveys and Tutorials</i>, vol. 23, no. 2, pp. 1193-1225, Second Quarter 2021.</p>
 </li>
-<li><p><b>Q.-V. Pham</b>, M. Zeng, R. Ruby, T. Huynh-The, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9374105">UAV Communications for Sustainable Federated Learning</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 70, no. 4, pp. 3944-3948, Apr. 2021. [<a href="https://www.dropbox.com/s/frhhm9nlfx1pweg/Matlab_Code.zip?dl=0">MATLAB Code</a>]</p>
+<li><p><b>Q.-V. Pham</b>, M. Zeng, R. Ruby, T. Huynh-The, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9374105">UAV Communications for Sustainable Federated Learning</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 70, no. 4, pp. 3944-3948, Apr. 2021. [<a href="https://github.com/phamqv/UAV-Sustainable-FL">MATLAB Code</a>]</p>
 </li>
 <li><p>C. de Alwis, A. Kalla, <b>Q.-V. Pham</b>, P. Kumar, K. Dev, W.-J. Hwang, and M. Liyanage, &ldquo;<a href="https://ieeexplore.ieee.org/document/9397776">Survey on 6G Frontiers: Trends, Applications, Requirements, Technologies and Future Research</a>,&rdquo; <i>IEEE Open Journal of the Communications Society</i>, vol. 2, pp. 836-886, Apr. 2021.</p>
 </li>
@@ -382,7 +382,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-08-08 09:12:43 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-08-10 02:35:22 GMT Daylight Time.
 </div>
 </div>
 </td>
