--- a/publication.html
+++ b/publication.html
@@ -69,13 +69,21 @@
 <p><div id="Preprints"></p>
 <h2>Preprints</h2>
 <ol>
-<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, N. C. Luong, H. Phan, and D. B. da Costa, &ldquo;<a href="">Improved Waveform Classification for Integrated Radar-Communication 6G Systems via Convolutional Neural Networks</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>, 2023.</p>
+<li><p>N.-M. Luu, M.-D. Nguyen, E. B. Mohamed, V.-D. Nguyen, and <b>Q.-V. Pham</b>, &ldquo;<a href="">Sample-Driven Control for Federated Learning for IoT Network with Real-Time Sensing</a>,&rdquo; submitted, <i>IEEE International Conference on Computer Communications (INFOCOM)</i>, Vancouver, Canada, 2024.</p>
+</li>
+<li><p>P. Boopathy, N. Deepa, N. Victor, T. R. Gadekallu, P. K. R. Maddikunta, G. Yenduri, W. Wang, <b>Q.-V. Pham</b>, T. Huynh-The, and M. Liyanage, &ldquo;<a href="https://arxiv.org/abs/2308.02677">Metaverse for Industry 5.0 in NextG Communications: Potential Applications and Future Challenges</a>,&rdquo; under review, <i>IEEE Open Journal of the Communications Society</i>, 2023.</p>
+</li>
+<li><p>X. Zhu, H. Wang, Z. Yang, and <b>Q.-V. Pham</b>, &ldquo;<a href="">Time-Division Based Integrated Sensing, Communication, and Computing in Integrated Satellite-Terrestrial Networks</a>,&rdquo; under review, <i>Digital Signal Processing</i>, 2023.</p>
+</li>
+<li><p>T.-T. Dao, D.-I. Noh, M. Hasegawa, H. Sekiya, and W.-J. Hwang, and <b>Q.-V. Pham</b>, &ldquo;<a href="">VT-MCNet: High-Accuracy Automatic Modulation Classification Model based on Vision Transformer</a>,&rdquo; under review, <i>IEEE Communications Letters</i>, 2023.</p>
+</li>
+<li><p>T. Huynh-The, N. C. Luong, H. Phan, D. B. da Costa, and <b>Q.-V. Pham</b>, &ldquo;<a href="">Improved Waveform Classification for Integrated Radar-Communication 6G Systems via Convolutional Neural Networks</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>, 2023.</p>
 </li>
 <li><p>T.-H. Vu, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">Rate-Splitting Multiple Access-Assisted THz-Based Short-Packet Communications</a>,&rdquo; under review, <i>IEEE Wireless Communications Letters</i>, 2023.  </p>
 </li>
-<li><p>M. Le, <b>Q.-V. Pham</b>, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang &ldquo;<a href="https://arxiv.org/abs/2308.04953">Wirelessly Powered Federated Learning Networks: Joint Power Transfer, Data Sensing, Model Training, and Resource Allocation</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
+<li><p>M. Le, H. T. Dinh, D. N. Nguyen, W.-J. Hwang, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://arxiv.org/abs/2308.04953">Wirelessly Powered Federated Learning Networks: Joint Power Transfer, Data Sensing, Model Training, and Resource Allocation</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
 </li>
-<li><p>M. Le, <b>Q.-V. Pham</b>, T. Huynh-The, T. Do-Duy, T.-H. Vu, and W.-J. Hwang &ldquo;<a href="">Applications of Distributed Machine Learning for Future IoT: A Comprehensive Survey</a>,&rdquo; under review, <i>IEEE Communications Surveys and Tutorials</i>.</p>
+<li><p>M. Le, T. Huynh-The, T. Do-Duy, T.-H. Vu, W.-J. Hwang, and <b>Q.-V. Pham</b>, &ldquo;<a href="">Applications of Distributed Machine Learning for Future IoT: A Comprehensive Survey</a>,&rdquo; under review, <i>IEEE Communications Surveys and Tutorials</i>.</p>
 </li>
 <li><p>T.-H. Vu, <b>Q.-V. Pham</b>, and S. Kim, &ldquo;<a href="">THz-based Rate-Splitting Multiple-Access (RSMA): Is It Always Better Than NOMA?</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
 </li>
@@ -89,7 +97,7 @@
 </li>
 <li><p>L. N. T. Huynh, <b>Q.-V. Pham</b>, Y. K. Tun, M. D. Hossain, and E.-N. Huh, &ldquo;<a href="">Optimization of Task Offloading for Microservice-enhanced Vehicular Edge Computing</a>,&rdquo; under review, <i>IEEE Communications Letters</i>.</p>
 </li>
-<li><p>M. Le, <b>Q.-V. Pham</b>, Q. V. Do, and W.-J. Hwang, &ldquo;<a href="">QoE-Driven Task Association and Resource Allocation in Aerial-Access Edge Computing Using Deep Reinforcement Learning</a>,&rdquo; under review, <i>IEEE Wireless Communications Letters</i>.</p>
+<li><p>M. Le, Q. V. Do, Z. Han, and W.-J. Hwang, and <b>Q.-V. Pham</b>, &ldquo;<a href="">Resource Allocation in THz-NOMA-enabled HAP Systems Based on Deep Reinforcement Learning</a>,&rdquo; under review, <i>IEEE Wireless Communications Letters</i>.</p>
 </li>
 <li><p>Q. V. Do, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="">QoE-Driven Task Association and Resource Allocation in Aerial-Access Edge Computing Using Deep Reinforcement Learning</a>,&rdquo; under review, <i>IEEE Transactions on Cognitive Communications and Networking</i>.</p>
 </li>
@@ -382,7 +390,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-08-10 02:35:22 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-08-10 09:32:09 GMT Daylight Time.
 </div>
 </div>
 </td>
